docker/test-provision/kube/test-01-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    purpose: production
    openshift.io/run-level: "0"
