docker/test-provision/kube/test-02-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    purpose: development
    openshift.io/run-level: "0"
