docker/test-provision/kube/test-05-hostnames-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostnames-dep
spec:
  selector:
    matchLabels:
      app: hostnames
  replicas: 3
  template:
    metadata:
      labels:
        app: hostnames
    spec:
      containers:
      - name: hostnames
        image: k8s.gcr.io/serve_hostname
        ports:
        - containerPort: 9376
          protocol: TCP
