docker/test-provision/kube/test-06-hostnames-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostnames-svc
spec:
  selector:
    app: hostnames
  ports:
  - name: default
    protocol: TCP
    port: 80
    targetPort: 9376
