docker/test-provision/kube/test-04-hostnames-allow-prod.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hostnames-allow-prod
spec:
  podSelector:
    matchLabels:
      app: hostnames
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: production
